<resources>
    <string name="order_alarm_channel_name">New order alerts</string>
    <string name="order_alarm_channel_desc">Urgent notifications about new orders</string>
    <string name="app_name">ITS KDS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_channel_order_id" content_override="true" translatable="false">wooandroid_notification_channel_order_id</string>
    <string name="notification_channel_review_id" content_override="true" translatable="false">wooandroid_notification_channel_review_id</string>
    <string name="notification_channel_general_id" content_override="true" translatable="false">wooandroid_notification_channel_general_id</string>
    <string name="notification_channel_pre_login_id" content_override="true" translatable="false">wooandroid_notification_channel_pre_login_id</string>
    <string name="order">order</string>
    <string name="review">review</string>
    <string name="rest">rest</string>
    <string name="prelogin">login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="amit_kumar">Amit Kumar</string>
    <string name="username">Login</string>
    <string name="bio">As an Android app developer, I have a passion for creating beautiful and functional apps for users. I write code primarily in Kotlin, which is a popular programming language for Android development. My focus is on creating a visually appealing and intuitive user experience that makes using the app a pleasure.</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="user_information">User Information</string>
    <string name="username_">Username</string>
    <string name="amitthecoder">amitthecoder</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="age">Age</string>
    <string name="_21">21</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="_07_02_2003">07/02/2003</string>
    <string name="mobile">Mobile</string>
    <string name="_91_9000000009">+91 9000000009</string>
    <string name="email">Email</string>
    <string name="axxxxxxa_gmail_com">axxxxxxa@gmail.com</string>
    <string name="social_media">Social Media</string>
    <string name="Chat">Chat</string>
    <string name="permissions">Permissions</string>
    <string name="user_balance">Balance</string>
    <string name="work_hours">Work hours</string>
    <string name="TIP">TIP</string>
    <string name="withdrawal">Cash withdrawal</string>
    <string name="payment_transfer">Payment Transfer\n</string>
    <string name="total">Total\n</string>
    <string name="social">Social</string>
    <string name="rate">Rate</string>
    <string name="vacation">Vacation</string>
    <string name="holidayuse">Holiday used</string>
    <string name="profile_start_work">Start Work</string>
    <string name="profileActive">Active</string>
    <string name="profileAddons">Addons</string>
    <string name="profileCash">Cash</string>
    <string name="profileDate">Date</string>
    <string name="profileTransfer">Transfer</string>
    <string name="profileTotal">Total</string>
    <string name="profileTips">Tip</string>
    <string name="profileTime">Time</string>
    <string name="profileStatus">Status</string>
    <string name="profileStar">Star</string>
    <string name="profileSocial">Social</string>
    <string name="profileSick">Sick</string>
    <string name="profileReward">Reward</string>
    <string name="profilePercent">Percent</string>
    <string name="profileLunch">Lunch</string>
    <string name="profileHoliday">Holiday</string>
    <string name="profileExtra">Extra</string>
    <string name="profileDescription">Description</string>
    <string name="profileZus">ZUS</string>
    <string name="graphic">Graphic</string>
    <string name="balance">Balance</string>
    <string name="signingOutGraphic">I am signing out</string>
    <string name="Log">Log</string>
    <string name="Balance">Balance</string>
    <string name="Graphic">Graphic</string>
    <string name="Logout">Logout</string>
    <string name="Profile">Profile</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ListHours">List Hours</string>
    <string name="GraphicModern">Modern Graphic</string>
    <string name="day_of_week_with_day">" %2$d %1$s "</string>
    <string name="header_day">Day</string>
    <string name="header_start">Start</string>
    <string name="header_end">End</string>
    <string name="header_time">Time [h]</string>
    <string name="profilWork">Profil Work</string>
    <string name="firstaname">First name</string>
    <string name="SetGraphic">Graphic Set</string>
    <string name="save">Save</string>
    <string name="firstName">"     Firstname     "</string>
    <string name="index_format">"     %1$d     "</string>
    <string name="noData">No data exists</string>
    <string name="profileHolidayUseMonth">Holiday Use</string>
    <string name="domain">Domain</string>
    <string name="Product">Product</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="Orders">Orders</string>
    <string name="status_processing">Processing</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_completed">Completed</string>
    <string name="status_pending">Pending</string>
    <string name="status_other">Other</string>
    <string name="order_progress">Proggres</string>
    <string name="order_newOrder">New</string>
    <string name="order_completed">Completed</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="status_out_for_delivery">Out for delivery</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="update_success">Success</string>
    <string name="update_failed">Update failed: %1$s</string>
    <string name="as_soon_as_possible">As soon as possible</string>
    <string name="Printer">Printer</string>
    <string name="no_printer_selected">No printer Selected</string>
    <string name="subtitle_printer">Printer settings</string>
    <string name="Settings">Settings</string>
    <string name="delivery_label_delivery">Delivery</string>
    <string name="delivery_label_pickup">Pick-up</string>
    <string name="delivery_label_unknown">Unknown</string>
    <string name="label_date">Date</string>
    <string name="label_client">Customer</string>
    <string name="label_phone">Phone</string>
    <string name="label_payment">Payment</string>
    <string name="label_time">Time</string>
    <string name="today">Today</string>
    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>
    <string name="date">Date</string>
    <string name="back_date_selection">Back</string>
    <string name="set_delivery_time">Set delivery time (manual)</string>
    <string name="delivery_time">Delivery time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="line_subtotal">Sub-total</string>
    <string name="line_delivery">Delivery</string>
    <string name="line_discount">Discount</string>
    <string name="line_additional_fee">Additional Fee</string>
    <string name="line_point_use">Points</string>
    <string name="line_total">TOTAL</string>
    <string name="label_notes">Notes</string>
    <string name="footer_thanks">Thank you for your order!</string>
    <string name="customer_waiting">Customer waiting</string>
    <string name="label_address">Address</string>
    <string name="btn_take_course">Take the course</string>
    <string name="btn_resign_course">Give up</string>
    <string name="tab_route">Queue</string>
    <string name="Logout_courier">Off day</string>
    <string name="logout">Logout</string>
    <string name="start_shift">Start</string>
    <string name="end_shift">End</string>
    <string name="return_to_restaurant">Return</string>
    <string name="confirm_pickup_count">Confirm (%d)</string>
    <string name="fab_plan">Show Route</string>
    <string name="route_return_to_restaurant">Return to restaurant</string>
    <string name="route_order_number">Order: %1$s</string>
    <string name="route_address">Address: %1$s</string>
    <string name="route_distance">Distance: %1$.2f km</string>
    <string name="route_status">Status: %1$s</string>
    <string name="route_eta">ETA: %1$s</string>
    <string name="route_start">Start: %1$s</string>
    <string name="route_planned">Planned: %1$s</string>
    <string name="asap">As soon as possible: %1$s</string>
    <string name="asap_text">As soon as possible</string>
    <string name="route_delay_late">Late by: %1$d min</string>
    <string name="route_delay_early">Early by: %1$d min</string>
    <string name="route_delay_ontime">On time</string>
    <string name="choseCar">Choose Car</string>
    <string name="in_delivery_with_count">In delivery</string>
    <string name="delivered">Delivered</string>
    <string name="accepted">Confirm</string>
    <string name="shift_not_started_label">Shift has not started</string>
    <string name="start_shift_button">Start Shift</string>
    <string name="tab_accepted_orders">Accepted</string>
    <string name="settings_profile_title">Profile title</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_subtitle">Configure notification sounds</string>
    <string name="printers_manage_title">Managment printers</string>
    <string name="printers_manage_subtitle">Add, edit and manage multiple printers</string>
    <string name="settings_title">Setting title</string>
    <string name="navigate_up">Navigate up</string>
    <string name="Logs">Logs</string>
    <string name="printer_title">Printer Title</string>
    <string name="logs_title">Log title</string>
    <string name="title_product_activity">Product Titile</string>
    <string name="tab_map">Map</string>
    <string name="new_route_notification_title">Route updated</string>
    <string name="new_route_notification_message">New route with %d stops received.</string>
    <string name="background_content_description">BG</string>
    <string name="in_delivery">In Delivery</string>
    <string name="na">N/A</string>
    <string name="dash">-</string>
    <string name="source_cd">Source: %1$s</string>
    <string name="delivery_type_cd">Delivery type: %1$s</string>
    <string name="scheduled_order">Scheduled order</string>
    <string name="preorder_tag">PREORDER</string>
    <string name="asap_tag">ASAP</string>
    <string name="start_time">Start %1$s</string>
    <string name="eta_time">ETA %1$s</string>
    <string name="distance_km">%.1f km</string>
    <string name="address_missing">No address</string>
    <string name="phone_missing">No phone number</string>
    <string name="payment_cash">Cash</string>
    <string name="payment_card">Card</string>
    <string name="payment_online">Online</string>
    <string name="payment_missing">No Payment</string>
    <string name="money_pln">%1$.2f %2$s</string>
    <string name="delivery_time_short">%1$s</string>
    <string name="restaurant_open">Open</string>
    <string name="restaurant_paused">Pause</string>
    <string name="restaurant_closed">Close</string>
</resources>