<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="@string/profilWork">
        <menu>
            <item
                android:id="@+id/action_home"
                android:icon="@drawable/ic_profile"
                android:title="@string/Orders"
                android:checkable="true"/>
            <item
                android:id="@+id/action_products"
                android:icon="@drawable/logo"
                android:title="@string/Product"
                android:checkable="true"/>
            <item
                android:id="@+id/action_log"
                android:icon="@drawable/ic_log"
                android:title="@string/Log"
                android:checkable="true"/>
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/Logout"
                android:orderInCategory="100"
                android:checkable="true"/>
            <item
                android:id="@+id/action_logout_courier"
                android:icon="@drawable/ic_logout"
                android:title="@string/Logout_courier"
                android:orderInCategory="100"
                android:checkable="true"/>
            <item
                android:id="@+id/action_setting"
                android:icon="@drawable/settings"
                android:title="@string/Settings"
                android:checkable="true"/>
        </menu>
    </item>
</menu>