<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_profile"
        android:title="@string/Orders" />
    <item
        android:id="@+id/action_products"
        android:title="@string/Product"
        android:icon="@drawable/logo"/>
   
    <item
        android:id="@+id/action_log"
        android:icon="@drawable/ic_log"
        android:title="@string/Log"/>
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/settings"
        android:title="@string/Settings"/>
   
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/Logout"
        android:orderInCategory="100" />
</menu>